...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Game View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="GameViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="GameViewController" customModule="SlashChallenge" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hY6-EB-LTN">
                                <rect key="frame" x="10" y="30" width="300" height="60"/>
...
                            <constraint firstItem="trF-9j-6Gj" firstAttribute="centerX" secondItem="exG-5V-RL4" secondAttribute="centerX" id="wG8-BH-ft6"/>
                            <constraint firstItem="dSX-sG-Dc3" firstAttribute="leading" secondItem="exG-5V-RL4" secondAttribute="leading" constant="20" id="ynx-Lk-YAt"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="exG-5V-RL4"/>
                    </view>
                    <connections>
                        <outlet property="firstUserTextfield" destination="sU8-w6-EQa" id="1tO-kK-Ikc"/>
                        <outlet property="initGameButton" destination="kHN-Ve-XUj" id="OzY-QI-uXW"/>
                        <outlet property="secondUserTextfield" destination="YU1-sn-JKX" id="uwy-O1-eE8"/>
                        <outlet property="showResultsButton" destination="T29-sn-kBR" id="veL-C5-RLS"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="KTd-YL-H45" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-455.07246376811599" y="70.982142857142847"/>
...
